# eepy

./: Cargo.toml  README.md  a.out  test.eepy  test.tab
examples/: example.eepy
src/: envs.rs  lib.rs  main.rs
src/backend/: codegen.rs  mod.rs
src/frontend/: errors.rs  lexer.rs  mod.rs  parser.rs
src/frontend/parser/: ast.rs
src/ir/: mod.rs
