[package]
name = "taube"
version = "0.1.0"
edition = "2021"

[features]
afl = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ariadne = "0.3.0"
clap = { version = "4.3.4", features = ["derive"] }
# logos = "0.13.0"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }

colored = "*"
istd = { git = "https://github.com/rookieCookies/istd" }
