[package]
name = "taube"
version = "0.1.0"
edition = "2021"

[features]
afl = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ariadne = "0.3.0"
clap = { version = "4.3.4", features = ["derive"] }

colored = "*"
istd = { git = "https://github.com/rookieCookies/istd" }
gccjit = { git = "https://github.com/swgillespie/gccjit.rs" }
